Added comments, filled tables with dummy info

--- a/public/index.html
+++ b/public/index.html
@@ -29,18 +29,18 @@
           <table class="table table-striped text-center">
               <thead>
                 <tr>
-                  <th scope="col">Ingredient 1</th>
+                  <th scope="col">boozeType: "Bourbon"</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <th scope="row">Ingredient 2</th>
+                  <th scope="row">drinkName: "Old Fashioned"</th>
                 </tr>
                 <tr>
-                  <th scope="row">Ingredient 3</th>
+                  <th scope="row">ingredients: "2 oz bourbon, 2 dashes bitters, 1 cube sugar, dash of water"</th>
                 </tr>
                 <tr>
-                  <th scope="row">Ingredient 4</th>
+                  <th scope="row">instructions: "Place sugar cube in old fashioned glass and saturate with bitters, with dash of water. Fill the glass with ice cubes and bourbon."</th>
                 </tr>
               </tbody>
             </table>
@@ -76,6 +76,7 @@
       </div>
       
 <!-- Start of footer -->
+<!-- NAVEE AND DANIEL, THIS MAY NEED TO CHANGE, WORK WITH CLASS-->
 <footer class="footer">
     <div class="two-toned-footer-color"></div>
     <p class="text-muted-footer text-center">
