--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Stylesheet-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 <!--Jumbotron-->
@@ -60,11 +61,11 @@
                       </object>
                       
                       </div>
-                <p class="h2 text-center">Choose the type of liquor you would like to drink and we will provide you with a recipe!</p>
+                <p class="h2 text-center" id="jumbo-text">Choose the type of liquor you would like to drink and we will provide you with a recipe!</p>
               </div>
             </div>
       <!--Main Content-->
-      <div class="container">
+      <div class="container" id="main-content">
           <!--Search input-->
           <div class="input-group mb-3">
               <input type="text" class="form-control" placeholder="Enter Drink Type" aria-label="Recipient's username" aria-describedby="button-addon2">
@@ -79,7 +80,7 @@
 <!-- NAVEE AND DANIEL, THIS MAY NEED TO CHANGE, WORK WITH CLASS-->
 <footer class="footer">
     <div class="two-toned-footer-color"></div>
-    <p class="text-muted-footer text-center">
+    <p class="footer-block text-muted-footer text-center">
       &copy; Copyright
     </p>
   </footer>
