--- a/public/index.html
+++ b/public/index.html
@@ -68,9 +68,9 @@
       <div class="container" id="main-content">
           <!--Search input-->
           <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="Enter Drink Type" aria-label="Recipient's username" aria-describedby="button-addon2">
-              <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+              <input type="text" class="form-control" placeholder="Enter Drink Type">
+              <div class="input-group">
+                <button class="btn btn-outline-secondary" type="button" id="button-addon2">Suggest</button>
               </div>
           </div>
       </div>    
@@ -78,12 +78,12 @@
       
 <!-- Start of footer -->
 <!-- NAVEE AND DANIEL, THIS MAY NEED TO CHANGE, WORK WITH CLASS-->
-<footer class="footer">
+<!-- <footer class="footer">
     <div class="two-toned-footer-color"></div>
     <p class="footer-block text-muted-footer text-center">
       &copy; Copyright
     </p>
-  </footer>
+  </footer> -->
   <!-- End of footer -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
