search button fix

--- a/public/index.html
+++ b/public/index.html
@@ -64,18 +64,19 @@
                 <p class="h2 text-center" id="jumbo-text">Choose the type of liquor you would like to drink and we will provide you with a recipe!</p>
               </div>
             </div>
-      <!--Main Content-->
+      <!--Search Container-->
       <div class="container" id="main-content">
           <!--Search input-->
           <div class="input-group mb-3">
               <input type="text" class="form-control" placeholder="Enter Drink Type">
               <div class="input-group">
-                <button class="btn btn-outline-secondary" type="button" id="button-addon2">Suggest</button>
+                <button type="button" class="btn col-3 btn-primary btn-md btn-block button-addon2" id="search-button">Suggest!</button>
               </div>
           </div>
-      </div>    
-      </div>
-      
+      </div>  
+      <!--Category container-->  
+
+
 <!-- Start of footer -->
 <!-- NAVEE AND DANIEL, THIS MAY NEED TO CHANGE, WORK WITH CLASS-->
 <!-- <footer class="footer">
