Added font awesome icons; adjusted MR for button

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <!--Stylesheet-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+    <!--NEW FONTS STYLESHEET-->
+    <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 <!--Jumbotron-->
@@ -70,7 +72,7 @@
           <div class="input-group mb-3">
               <input type="text" class="form-control" placeholder="Enter Drink Type">
               <div class="input-group">
-                <button type="button" class="btn col-3 btn-primary btn-md btn-block button-addon2" id="search-button">Suggest!</button>
+                <button type="button" class="btn btn-primary btn-md btn-block button-addon2" id="search-button"><i class="fas fa-cocktail" data-fa-transform="grow-10 up-15" style="color: black"></i>Try one on us!</button>
               </div>
           </div>
       </div>  
