--- a/public/index.html
+++ b/public/index.html
@@ -56,10 +56,10 @@
       <div id="pg1">
           <div class="jumbotron jumbotron-fluid">
               <div class="container">
-                  <div style="text-align:center;padding:10px 0;">
+                  <div style="text-align:center">
                 
                       <object>
-                        <embed src="assets/Olive&Twist.svg" width="30%" height="30%">
+                        <embed src="assets/Olive&Twist.svg" width="25%" height="25%">
                       </object>
                       
                       </div>
@@ -76,8 +76,20 @@
               </div>
           </div>
       </div>  
+      <!--Or section-->
+      <div class="container" id="category-buttons">
+        <p>Or</p>
+      </div>
       <!--Category container-->  
-
+      <div class="container" id="category-buttons">
+        <button type="button" class="btn btn-primary btn-lg col-2">Whiskey</button>
+        <button type="button" class="btn btn-primary btn-lg col-2">Vodka</button>
+        <button type="button" class="btn btn-primary btn-lg col-2">Tequila</button>
+        <button type="button" class="btn btn-primary btn-lg col-2">Rum</button>
+      </div>
+      <div class="container" id="category-buttons">
+        <button type="button" class="btn btn-primary btn-lg col-3">Random</button>
+      </div>
 
 <!-- Start of footer -->
 <!-- NAVEE AND DANIEL, THIS MAY NEED TO CHANGE, WORK WITH CLASS-->
