--- a/public/index.html
+++ b/public/index.html
@@ -148,6 +148,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src ="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
 <script src="js/index.js"></script>
+<script src="js/anime.js"></script>
 
 
   </body>
