--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
             </div>
       <!--Recipe-->
       <div class="container">
+          <div class="col text-center">
           <table class="table table-striped text-center" id="recipetable">
               <thead>
                 <tr>
@@ -44,7 +45,10 @@
                 </tr>
               </tbody>
             </table>
-                <button class="btn btn-outline-secondary text-center btn-lg btn-block" type="button" id="button-addon3">Back</button>
+            
+                <button class="btn btn-secondary btn-lg" type="button" id="button-addon3">Back</button>
+              </div>  
+        
               </div>
           </div>
       </div>
