Changes to index.html DO NOT FORGET HANDLEBARS - random 'works' - needs to have limitations set so it doesn't append literally any garbage possible

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
                       </object>
                       <!--Giving booze type id of "boozeID"-->
                       </div>
-                      <p class="h1 text-center" id="boozeID">boozeType: "Bourbon"</p>
+                      <p class="h1 text-center tblgo" id="boozeID">boozeType: "Bourbon"</p>
               </div>
             </div>
       <!--Recipe-->
@@ -33,15 +33,20 @@
           <table class="table table-striped text-center" id="recipetable">
               <thead>
                 <tr>
-                  <th id="drinkName" scope="row">drinkName: "Old Fashioned"</th>
+                  <th class="tblgo" id="drinkName" scope="row">drinkName: "Old Fashioned"</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <th id="ingredients" scope="row">ingredients: "2 oz bourbon, 2 dashes bitters, 1 cube sugar, dash of water"</th>
+                  <th id="ingredients" scope="row">Ingredients: 
+                    <p class="tblgo" id="ingr1">2 oz bourbon</p> 
+                    <p class="tblgo" id="ingr2">2 dashes bitters</p> 
+                    <p class="tblgo" id="ingr3">1 cube sugar</p> 
+                    <p class="tblgo" id="ingr4">dash of water</p>
+                  </th>
                 </tr>
                 <tr>
-                  <th id="instructions" scope="row">instructions: "Place sugar cube in old fashioned glass and saturate with bitters, with dash of water. Fill the glass with ice cubes and bourbon."</th>
+                  <th class="tblgo" id="instructions" scope="row">instructions: "Place sugar cube in old fashioned glass and saturate with bitters, with dash of water. Fill the glass with ice cubes and bourbon."</th>
                 </tr>
               </tbody>
             </table>
