--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,14 @@
     <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
     <!--NEW FONTS STYLESHEET-->
     <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Economica|Luckiest+Guy|Playfair+Display+SC|Special+Elite" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 <!--Jumbotron-->
   <body>
       <div id="pg2">
           <div class="jumbotron jumbotron-fluid">
-              <div class="container">
+              <div class="container" id="pg2jumbo">
                   <div style="text-align:center;padding:10px 0;">
                 
                       <object>
