adding new text to 'section 2'

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Economica|Luckiest+Guy|Playfair+Display+SC|Special+Elite" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
-<!--Jumbotron-->
+<!--Jumb7otron-->
   <body>
       <div id="pg2">
           <div class="jumbotron jumbotron-fluid">
@@ -25,7 +25,8 @@
                       </object>
                       <!--Giving booze type id of "boozeID"-->
                       </div>
-                      <p class="h1 text-center tblgo" id="boozeID">boozeType: "Bourbon"</p>
+                      <p class="h1 text-center" id="mainIngr">The Olive (main ingredient):</p>
+                      <p class="h2 text-center tblgo" id="boozeID">"Bourbon"</p>
               </div>
             </div>
       <!--Recipe-->
