Added quotes and descriptors to section 2

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
                    </svg>
                       <!--Giving booze type id of "boozeID"-->
                       </div>
-                      <p class="h1 text-center" id="mainIngr">The Olive (main ingredient):</p>
+                      <p class="h1 text-center" id="mainIngr">Main Ingredient:</p>
                       <p class="h2 text-center tblgo" id="boozeID">"Bourbon"</p>
               </div>
             </div>
