--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
                      <path class="stb2" d="M147.2,6.1l-3,67.1l-2.4,46.1v18.4c0,1.9-1.5,3.4-3.4,3.4H76.4V6.1L147.2,6.1z"/>
                      <path class="stb3" d="M76.4,6.1v135.2H14.7c-1.8,0-3.4-1.5-3.4-3.4v-15.5l-2-48.8L5.8,6L76.4,6.1z"/>
                    </g>
-                   <g id="XMLID_2_" class="st4">
+                   <g id="XMLID_2_" class="stb4">
                      <path class="stb5" d="M144.3,73.4l-2.4,46.1v18.4c0,1.9-1.5,3.4-3.4,3.4H14.6c-1.9,0-3.4-1.5-3.4-3.4v-15.5l-2-48.8
                        c21.7-8.9,41.8,6.3,64.1,1.1c1-0.2,2-0.5,3-0.7c12.6-2.9,21.5-4.2,35.3-0.4C122.1,76.6,134.2,78.2,144.3,73.4z"/>
                    </g>
@@ -52,7 +52,7 @@
                      c6.2-2.4,13.1,0.7,15.5,6.9l10.9,28.3C136.4,112.9,133.3,119.8,127.1,122.2z"/>
                    <path class="stb6" d="M100.3,106.7l-29.4,7.1c-6.4,1.6-12.9-2.4-14.5-8.8l-7.1-29.4C47.6,69.1,51.6,62.6,58,61l29.4-7.1
                      c6.4-1.6,12.9,2.4,14.5,8.8l7.1,29.4C110.7,98.6,106.7,105.1,100.3,106.7z"/>
-                   <g id="XMLID_5_" class="st4">
+                   <g id="XMLID_5_" class="stb4">
                      <path class="stb7" d="M144.3,73.4l-2.4,46.1V138c0,1.9-1.5,3.4-3.4,3.4H76.4V74.1c12.6-2.9,21.5-4.2,35.3-0.4
                        C122,76.6,134.2,78.2,144.3,73.4z"/>
                      <path class="stb8" d="M76.4,74.1v67.2H14.6c-1.9,0-3.4-1.5-3.4-3.4v-15.5l-2-48.8C30.9,64.8,51,80,73.4,74.8
@@ -141,7 +141,7 @@
 		<path class="sta2" d="M126.5,102.6c-2.5-1-5.4-0.7-7.6,0.8c-1.7,1.1-3.4,2.3-5,3.5c-1.1,0.8-2.2,1.7-3.2,2.7
 			c-2.7,2.9-3,6.9-2.1,10.6c0.5,2.3,1.7,3.8,3.2,5.5c-0.9-1-0.9-2.7-0.5-3.9c0.9-2.5,3.7-4.3,6-5.4c1.7-0.8,3.6-1.4,5.3-2.1
 			c1.6-0.7,3.3-1.4,4.6-2.7c0.7-0.7,1.3-1.5,1.7-2.4C130.6,105.4,128.7,103.5,126.5,102.6z"/>
-		<path class="st2a" d="M120.7,152.1c6.4-2.6,14.6-6.7,15.6-10.8c3.5-9.3,0.9-13.2,0.9-13.2c0.5,4.4-5.7,7.3-5.7,7.3
+		<path class="sta2" d="M120.7,152.1c6.4-2.6,14.6-6.7,15.6-10.8c3.5-9.3,0.9-13.2,0.9-13.2c0.5,4.4-5.7,7.3-5.7,7.3
 			c-3.1,1.2-6.7,2.7-9.4,3.7c-5.7,2.3-7.8,2.9-9.7,6.5c-0.8,1.5-0.4,4.7,0,7l0,0c0,0,0,0.5,0.5,2.4c0.9,3.9,1.5,4.3,3.1,4.7
 			c-3-3.5,0.8-5.9,3.1-6.9C119.7,152.5,120.2,152.3,120.7,152.1L120.7,152.1L120.7,152.1z"/>
 	</g>
@@ -160,10 +160,7 @@
       <div class="container" id="main-content">
          
       <!--Category container-->  
-      <div class="container" id="category-buttons">
-          <h1 class="ml3">Feeling Lucky?</h1>            
-        <button type="button" class="btn btn-primary btn-lg col-3 btnclass" id="randombtn">Random</button>
-      </div>
+      
 
 
       <div class="container" id="category-buttons">
@@ -180,6 +177,18 @@
       <button type="button" class="btn btn-primary btn-lg col-3 btnclass" id="ginbtn">Gin</button>
       <button type="button" class="btn btn-primary btn-lg col-3 btnclass" id="brandybtn">Brandy</button>
     </div>
+
+    <div class="container" id="category-buttons">
+        <h1 class="ml3">Feeling Lucky?</h1>            
+      <button type="button" class="btn btn-primary btn-lg col-3 btnclass" id="randombtn">Random</button>
+    </div>
+
+
+
+
+
+
+
 
 <!-- Start of footer -->
 <!-- NAVEE AND DANIEL, THIS MAY NEED TO CHANGE, WORK WITH CLASS-->
