--- a/public/form.html
+++ b/public/form.html
@@ -10,12 +10,12 @@
     <form class="col-lg-6 offset-lg-3">
         <div class="form-group" id="form-page">
           <label for="exampleFormControlInput1">Enter Drink Name: </label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Whiskey Sour..">
+          <input type="email" class="form-control formClr" id="formDrink" placeholder='"Whiskey Sour"''>
         </div>
         <div class="form-group">
           <label for="exampleFormControlSelect1">Alcohol Type</label>
-          <select class="form-control" id="exampleFormControlSelect1">
-            <option>Choose One</option>
+          <select class="form-control" id="formBooze">
+            <option value="default" selected disabled>Choose One</option>
             <option>Whiskey</option>
             <option>Vodka</option>
             <option>Tequila</option>
@@ -26,16 +26,16 @@
         </div>
         <div class="form-group">
                 <label for="exampleFormControlInput1">Add Ingredients: </label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Bitters, Lime, etc..">
+                <input type="email" class="form-control formClr" id="formIngr" placeholder="Bitters, Lime, etc..">
                 <br>
 
               </div>
         <div class="form-group">
           <label for="exampleFormControlTextarea1">Instructions: </label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Add Instructions Here..."></textarea>
+          <textarea class="form-control formClr" id="formInstr" rows="3" placeholder="Add Instructions Here..."></textarea>
         </div>
         <div class="submit">
-            <button type="button" class="btn btn-primary btn-lg col-3 btnclass">Add!</button>
+            <button type="button" class="btn btn-primary btn-lg col-3 btnclass" id="submitbtn">Add!</button>
         </div>
       </form>
   </body>
