--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="container" id="pg2jumbo">
         <div style="text-align:center;padding:10px 0;">
-          <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+          <!--Thus begins our section 2 animation-->
+          <svg version="1.1" id="Layer_2" class="ninjaVanish" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
             x="0px" y="0px" viewBox="0 0 153.6 155.9" style="enable-background:new 0 0 153.6 155.9;"
             xml:space="preserve">
             <style type="text/css">
