--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="container" id="pg2jumbo">
         <div style="text-align:center;padding:10px 0;">
+          <div id="picDiv"></div>
           <!--Thus begins our section 2 animation-->
           <svg version="1.1" id="Layer_2" class="ninjaVanish" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
             x="0px" y="0px" viewBox="0 0 153.6 155.9" style="enable-background:new 0 0 153.6 155.9;"
@@ -227,7 +228,7 @@
             </div>
           </div>
           <div class="card">
-              <img src="assets/FinalTequilaLimeOnTopLonger.png" class="card-img-top" alt="Tequila">
+              <img src="assets/FinalTequila.png" class="card-img-top" alt="Tequila">
               <div class="card-body">
                   <button type="button" class="btn btn-primary btn-lg btn-block btnclass" id="tequilabtn">Tequila</button>
               </div>
