--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 </head>
 <!--Jumb7otron-->
 
-<body>
+<body id="top">
   <div id="pg2">
     <div class="jumbotron jumbotron-fluid">
       <div class="container" id="pg2jumbo">
